--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <title>titulo del post</title>
 </head>
 <body>
-    <h1>aqui haremos un blog post</h1>
-    <p>este es el parrafo de inicio </p>
+    <div id="container">
+        <div id="post">
+            <h1>titulo interactivo e interesante</h1>
+            <p>este es el parrafo de inicio donde se explicaran cosas divertidas e interesantes</p>
+        </div>
+    </div>
 </body>
 </html>
