--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <p>cabecera</p>
+        </div>
         <div id="post">
             <h1>titulo interactivo e interesante</h1>
             <p>este es el parrafo de inicio donde se explicaran cosas divertidas e interesantes</p>
