finalizada la cabecera con diseño violeta

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <p>cabecera</p>
+            Hyperblog
+            <span id="tagline">tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>titulo interactivo e interesante</h1>
