agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>titulo interactivo e interesante</h1>
             <p>este es el parrafo de inicio donde se explicaran cosas divertidas e interesantes</p>
+            <p>lod blog son la mejor forma de compartir contenido e ideas, mejor que youtube o conferencias</p>
         </div>
     </div>
 </body>
